greenhub now works as an installable PWA

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,8 +1,10 @@
 html,
+document,
 body {
 	background-color: #222;
 	color: green;
 	overflow: hidden;
+	transition: all 2s ease-in-out;
 }
 .svg {
 	width: 100%;
