added a ribbon for github

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -19,10 +19,39 @@ body {
 	stroke-linecap: round;
 	fill: none;
 	filter: drop-shadow(0 0 0.5rem white);
+	pointer-events: none;
 }
 
 @keyframes dash {
 	to {
 		stroke-dashoffset: -100;
 	}
+}
+.ribbon {
+	/* positioning */
+	position: fixed;
+	padding: 5px 45px;
+	width: 128px;
+	/* top right of the page */
+	top: 50px;
+	right: -50px;
+	-webkit-transform: rotate(45deg);
+	-moz-transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	transform: rotate(45deg);
+	/* flat ribbon effects */
+	box-shadow: 0 0 0 3px #0091ff;
+	text-shadow: 0 0 0 #ffffff;
+	/* looks */
+	background-color: #0091ff;
+	color: #ffffff;
+	font-size: 13px;
+	font-family: sans-serif;
+	text-decoration: none;
+	font-weight: bold;
+	/* ribbon effects */
+	border: 2px dotted #ffffff;
+	/* webkit antialias fix */
+	-webkit-backface-visibility: hidden;
+	letter-spacing: 0.5px;
 }
